only an issue if you make use of the new `not' syntax). Rather than
checking/manipulating elements directly, use the new functions
`byte-compile-warning-enabled-p', `byte-compile-disable-warning', and
`byte-compile-enable-warning.'

** `mode-name' is no longer guaranteed to be a string.
Use `(format-mode-line mode-name)' to ensure a string value.


* Lisp Changes in Emacs 23.1

** `beginning-of-defun-function' now takes one argument, the count
   given to `beginning-of-defun'.

** The variable `inhibit-changing-match-data', if non-nil, prevents the
search and match primitives from changing the match data.

+++
** New function `match-substitute-replacement' returns the result of
`replace-match' without actually using it in the buffer.

** If a local hook function has a non-nil `permanent-local-hook'
property, then `kill-all-local-variables' does not remove it from
the local value of the hook variable.  This means it remains
even if you change major modes.

+++
** A list of default values can be specified for the DEFAULT argument of
functions `read-from-minibuffer', `read-string', `read-command',
`read-variable', `read-buffer', `completing-read'.  Elements of this list
are available for inserting into the minibuffer by typing `M-n'.
For empty input these functions return the first element of this list.

** `custom-note-var-changed' tells Custom to treat the change in a certain
variable as having been made within Custom.

** `frame-inherited-parameters' lets new frames inherit parameters from
the selected frame.

** Commands should use `use-region-p' to test whether there is
an active region that they should operate on.

** `region-active-p' returns non-nil when Transient Mark mode
is enabled and there is an active region.  This is NOT the best function
to use to test whether a command should operate on the region instead
of the usual behavior -- for that, use `use-region-p'.

** New keymap `input-decode-map' overrides like key-translation-map, but